[package]
name = "roguelike"
version = "0.1.0"
authors = ["Klim <klim.lestsenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = { version = "0.15", features = ["serialization"] }
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
